# CppProject-practice

./: git基础操作.md
1cmdline-parser/: 0关于该项目可以收获的.md  1关于该项目的预计流程.md  1蓝图2精简.md  1蓝图4精简-详细-windows.md
1cmdline-parser/项目回顾/: 0初始化环境中使用ai.md  c++17 optional.md  值得记录的现代C++方法与思想.md
2ExprCalc/: 0关于该项目.md
2ExprCalc/ExprCalc/: CMakeLists.txt  main.cpp  vcpkg.json
2ExprCalc/ExprCalc/src/: calculator.cpp  calculator.h  error.h  evaluator.cpp  evaluator.h  lexer.cpp  lexer.h  logger.cpp  logger.h  shunting_yard.cpp  shunting_yard.h  symbol_table.cpp  symbol_table.h  token.h
2ExprCalc/ExprCalc/tests/: test_calculator.cpp  test_lexer.cpp
2ExprCalc/·项目回顾/: 2exprcalc C++ 代码深度分析笔记.md  3C++ 项目测试策略笔记.md
2ExprCalc/项目回顾/: 1C++ 笔记：从 ShuntingYard 实现看现代 C++ 实践 2025.7.1.md
3vcpkg/: 25.7.3 Vcpkg 学习笔记：从入门到现代 CMake 项目实战.md
3vcpkg/my-awesome-project/: CMakeLists.txt  main.cpp  vcpkg.json
ExprCalc/: 1蓝图.md
cmdline-parser/: 1蓝图1复杂.md  1蓝图3精简-linux.md  2阶段1：核心架构设计详解.md
cmdline-parser/项目回顾/: 1关于链式调用.md
